--- a/elgen-esg-ingest-service/requirements.txt
+++ b/elgen-esg-ingest-service/requirements.txt
@@ -8,7 +8,6 @@ elasticsearch[async]==8.8.0
 nltk==3.8.1
 circuitbreaker==2.0.0
 aiohttp==3.8.4
-langchain==0.0.225
 git+https://github.com/casics/nostril.git@fbc0c91
 opentelemetry-instrumentation-logging==0.38b0
 opentelemetry-exporter-otlp-proto-grpc==1.18.0
@@ -16,3 +15,10 @@ opentelemetry-sdk==1.18.0
 python-json-logger==2.0.7
 inflection~=0.5.1
 python-multipart==0.0.5
+pdfminer==20191125
+python-bidi~=0.4.2
+pytest~=7.4.0
+pytest-asyncio==0.21.0
+pytest-mock==3.11.1
+httpx==0.23.3
+PyMuPDF== 1.23.4
